--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Profile</title>
+  <title>Ronaldo's Profile</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -40,28 +40,31 @@
       font-size: 16px;
     }
 
-    .social-links a {
-      margin: 0 10px;
-      text-decoration: none;
-      color: #3498db;
-      font-weight: bold;
+    .contact-info {
+      margin-top: 20px;
+      font-size: 16px;
+      color: #444;
     }
 
-    .social-links a:hover {
+    .contact-info a {
+      color: #3498db;
+      text-decoration: none;
+    }
+
+    .contact-info a:hover {
       text-decoration: underline;
     }
   </style>
 </head>
 <body>
   <div class="profile-container">
-    <img src="your-photo.jpg" alt="Profile Picture" class="profile-img" />
-    <h1>Your Name</h1>
-    <p>Short description about you. For example: Web Developer | Tech Enthusiast | Coffee Lover</p>
+    <img src="profile.jpg" alt="Ronaldo's Photo" class="profile-img" />
+    <h1>Ronaldo</h1>
+    <p>Web Developer | Tech Enthusiast | Creative Thinker</p>
 
-    <div class="social-links">
-      <a href="https://github.com/yourusername" target="_blank">GitHub</a>
-      <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
-      <a href="mailto:you@example.com">Email</a>
+    <div class="contact-info">
+      <p><strong>Email:</strong> <a href="mailto:ronaldo123@gmail.com">ronaldo123@gmail.com</a></p>
+      <p><strong>Phone:</strong> <a href="tel:+1234567890">+1 234 567 890</a></p>
     </div>
   </div>
 </body>
