--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
   <div class="profile-container">
-    <img src="profile.jpg" alt="Ronaldo's Photo" class="profile-img" />
+    <img src="ronaldo.png" alt="Ronaldo's Photo" class="profile-img" />
     <h1>Ronaldo</h1>
     <p>Web Developer | Tech Enthusiast | Creative Thinker</p>
 
