--- a/index.html
+++ b/index.html
@@ -2,69 +2,106 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ronaldo's Profile</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>ALI's Profile</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap');
+
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
       margin: 0;
-      padding: 0;
+      background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+      font-family: 'Poppins', sans-serif;
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      padding: 20px;
     }
 
-    .profile-container {
-      max-width: 600px;
-      margin: 50px auto;
-      background-color: #fff;
-      border-radius: 10px;
-      padding: 30px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    .profile-card {
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(15px);
+      border-radius: 20px;
+      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+      width: 350px;
       text-align: center;
+      padding: 30px 20px;
     }
 
     .profile-img {
-      width: 150px;
-      height: 150px;
+      width: 140px;
+      height: 140px;
       border-radius: 50%;
+      border: 4px solid #fff;
       object-fit: cover;
-      border: 3px solid #3498db;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+      margin-bottom: 20px;
+      transition: transform 0.3s ease;
+    }
+
+    .profile-img:hover {
+      transform: scale(1.05);
     }
 
     h1 {
-      margin-top: 20px;
-      color: #333;
+      margin: 0;
+      font-weight: 600;
+      font-size: 2.5rem;
+      letter-spacing: 2px;
+      margin-bottom: 10px;
+      color: #fff;
     }
 
-    p {
-      color: #666;
-      font-size: 16px;
+    p.title {
+      margin-top: 0;
+      margin-bottom: 30px;
+      font-weight: 300;
+      font-size: 1.1rem;
+      color: #e0e0e0;
     }
 
     .contact-info {
-      margin-top: 20px;
-      font-size: 16px;
-      color: #444;
+      text-align: left;
+      background: rgba(255,255,255,0.15);
+      padding: 20px;
+      border-radius: 15px;
+      font-size: 1rem;
+      line-height: 1.6;
+    }
+
+    .contact-info p {
+      margin: 10px 0;
+      color: #fff;
     }
 
     .contact-info a {
-      color: #3498db;
+      color: #ffd700;
       text-decoration: none;
+      font-weight: 600;
     }
 
     .contact-info a:hover {
       text-decoration: underline;
     }
+
+    /* Responsive */
+    @media (max-width: 400px) {
+      .profile-card {
+        width: 100%;
+      }
+    }
   </style>
 </head>
 <body>
-  <div class="profile-container">
-    <img src="ronaldo.png" alt="Ronaldo's Photo" class="profile-img" />
-    <h1>Ronaldo</h1>
-    <p>Web Developer | Tech Enthusiast | Creative Thinker</p>
+  <div class="profile-card">
+    <img src="ronaldo.png" alt="ALI's Photo" class="profile-img" />
+    <h1>ALI</h1>
+    <p class="title">Web Developer | Tech Enthusiast | Creative Thinker</p>
 
     <div class="contact-info">
-      <p><strong>Email:</strong> <a href="mailto:ronaldo123@gmail.com">ronaldo123@gmail.com</a></p>
-      <p><strong>Phone:</strong> <a href="tel:+1234567890">+1 234 567 890</a></p>
+      <p><strong>Email:</strong> <a href="mailto:ali123@gmail.com">ali123@gmail.com</a></p>
+      <p><strong>Phone:</strong> <a href="tel:+628123456789">+62 812 3456 789</a></p>
     </div>
   </div>
 </body>
